# wai-example

./: LICENSE  README.md  stack.yaml  wai-example.cabal
app/: Main.hs  Response.hs
static/: main.html  main.js  response.html
