name:                wai-example
version:             0.1.0.0
synopsis:            example of haskell web application
description:         Please see README.md
homepage:            http://github.com/mitsuji/wai-example#readme
license:             BSD3
license-file:        LICENSE
author:              Takamasa Mitsuji
maintainer:          tkms@mitsuji.org
copyright:           2016 Takamasa Mitsuji
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

--library
--  hs-source-dirs:      src
--  exposed-modules:     Lib
--  build-depends:       base >= 4.7 && < 5
--  default-language:    Haskell2010
--
executable wai-example-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , time
                     , text
                     , bytestring
                     , file-embed
                     , http-types
                     , warp
                     , wai
                     , wai-app-static
  default-language:    Haskell2010

--test-suite wai-example-test
--  type:                exitcode-stdio-1.0
--  hs-source-dirs:      test
--  main-is:             Spec.hs
--  build-depends:       base
--                     , wai-example
--  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
--  default-language:    Haskell2010
--
source-repository head
  type:     git
  location: https://github.com/mitsuji/wai-example
